<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFormPendaftaran">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ldaftar"
        android:textSize="15pt"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="120dp" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="160dp" />

    <EditText
        android:id="@+id/edAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textMultiLine|text"
        android:text="Name"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="217dp" />

    <EditText
        android:id="@+id/EdEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textEmailAddress"
        android:text="Name"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="282dp" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword"
        android:text="Name"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="350dp" />

    <EditText
        android:id="@+id/edrepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/erepass"
        android:inputType="textPassword"
        android:text="Name"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="415dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:layout_editor_absoluteX="391dp"
        tools:layout_editor_absoluteY="627dp" />

</androidx.constraintlayout.widget.ConstraintLayout>